--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,9 @@
                 <img src="images/logo.png" alt="Stock Market Logo">
             </a>
             <nav>
-                <a href="account.html" class="account-link">
-                    <i class="fas fa-user"></i>
-                    <span id="username-display">Account</span>
+                <a href="favorites.html" class="favorites-link">
+                    <i class="fas fa-star"></i>
+                    <span>Favorites</span>
                 </a>
             </nav>
         </div>
@@ -24,17 +24,16 @@
 
     <main>
         <div class="description">
-            <h1>Welcome to Stock Market</h1>
+            <h1>Welcome to Burzalupa</h1>
             <p>Search for stocks, track your favorite companies, and stay updated with the latest market trends.</p>
         </div>
 
         <div class="search-container">
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Enter stock symbol or company name..." onkeypress="handleKeyPress(event)">
-                <button onclick="searchStocks()">
-                    <i class="fas fa-search"></i>
-                </button>
+                <input type="text" id="searchInput" placeholder="Enter stock symbol or company name...">
             </div>
+            <div id="searchSuggestions" class="search-suggestions"></div>
+            <div id="selectedStocks" class="selected-stocks"></div>
         </div>
     </main>
 
