--- a/static/favorites.html
+++ b/static/favorites.html
@@ -18,6 +18,10 @@
                     <i class="fas fa-star"></i>
                     <span>Favorites</span>
                 </a>
+                <a href="log.html" class="nav-link active">
+                    <i class="fas fa-terminal"></i>
+                    <span>Logs</span>
+                </a>
             </nav>
         </div>
     </header>
@@ -27,7 +31,6 @@
             <h1>Favorite Stocks</h1>
             <p>Your shared list of favorite stocks and companies.</p>
         </div>
-
         <div class="favorites-container">
             <div id="favoritesList" class="stock-list">
                 <!-- Favorites will be populated here by JavaScript -->
@@ -37,4 +40,4 @@
 
     <script src="script.js"></script>
 </body>
-</html> 
+</html>
