--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,10 @@
                     <i class="fas fa-star"></i>
                     <span>Favorites</span>
                 </a>
+                <a href="log.html" class="nav-link active">
+                    <i class="fas fa-terminal"></i>
+                    <span>Logs</span>
+                </a>
             </nav>
         </div>
     </header>
@@ -29,7 +33,6 @@
         </div>
 
         <div class="search-container">
-            
             <div class="search-box">
                 <input type="text" id="searchInput" placeholder="Enter stock symbol or company name...">
             </div>
