Auto-scroll to bottom, fix logs

--- a/static/log.html
+++ b/static/log.html
@@ -50,18 +50,31 @@
             logContainer.scrollTop = logContainer.scrollHeight;
         }
 
+        function isAtBottom(container) {
+            return container.scrollTop + container.clientHeight >= container.scrollHeight - 1;
+        }
+
         function renderLog(msg) {
+            const shouldScroll = isAtBottom(logContainer);
+
             const logEntry = document.createElement("div");
 
             try {
-                const json = JSON.parse(msg);
+                const json = typeof msg === "string" ? JSON.parse(msg) : msg;
                 const level = (json.level || "info").toLowerCase();
-                const timestamp = new Date(json.time).toISOString();
-                const message = json.msg || "(no message)";
-                const extraFields = { ...json };
-                delete extraFields.time;
-                delete extraFields.level;
-                delete extraFields.msg;
+
+                let timestamp = json.time || json.timestamp || Date.now();
+                if (typeof timestamp === "number") {
+                    timestamp = new Date(timestamp).toISOString();
+                }
+
+                const message = json.msg || json.message || "(no message)";
+                const extra = { ...json };
+                delete extra.time;
+                delete extra.timestamp;
+                delete extra.level;
+                delete extra.msg;
+                delete extra.message;
 
                 logEntry.className = `log-entry ${level}`;
                 logEntry.innerHTML = `
@@ -70,17 +83,13 @@
                         <span class="level">${level}</span>
                     </div>
                     <div class="log-message">${message}</div>
-                    ${
-                        Object.keys(extraFields).length
-                            ? `
-                            <button class="toggle-extra">Show details ▼</button>
-                            <div class="log-extra hidden">
-                                <pre>${JSON.stringify(extraFields, null, 2)}</pre>
-                            </div>`
-                            : ""
-                    }
+                    ${Object.keys(extra).length ? `
+                        <button class="toggle-extra">Show details ▼</button>
+                        <div class="log-extra hidden">
+                            <pre>${JSON.stringify(extra, null, 2)}</pre>
+                        </div>` : ""}
                 `;
-            } catch (e) {
+            } catch {
                 logEntry.className = "log-entry error";
                 logEntry.innerHTML = `
                     <div class="log-header">
@@ -92,15 +101,17 @@
             }
 
             logContainer.appendChild(logEntry);
-            logContainer.scrollTop = logContainer.scrollHeight;
 
-            const toggleBtn = logEntry.querySelector(".toggle-extra");
-            const extraDiv = logEntry.querySelector(".log-extra");
+            if (shouldScroll) {
+                logContainer.scrollTo({ top: logContainer.scrollHeight, behavior: "auto" });
+            }
 
-            if (toggleBtn && extraDiv) {
-                toggleBtn.addEventListener("click", () => {
-                    const isHidden = extraDiv.classList.toggle("hidden");
-                    toggleBtn.textContent = isHidden ? "Show details ▼" : "Hide details ▲";
+            const toggle = logEntry.querySelector(".toggle-extra");
+            const extra = logEntry.querySelector(".log-extra");
+            if (toggle && extra) {
+                toggle.addEventListener("click", () => {
+                    const hidden = extra.classList.toggle("hidden");
+                    toggle.textContent = hidden ? "Show details ▼" : "Hide details ▲";
                 });
             }
         }
