--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <title>Stock Market - Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
