Change paths in a hrefs

--- a/static/log.html
+++ b/static/log.html
@@ -12,15 +12,15 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="images/logo.png" alt="Stock Market Logo">
             </a>
             <nav>
-                <a href="favorites.html" class="favorites-link">
+                <a href="/favorites" class="favorites-link">
                     <i class="fas fa-star"></i>
                     <span>Favorites</span>
                 </a>
-                <a href="log.html" class="nav-link active">
+                <a href="/log" class="nav-link active">
                     <i class="fas fa-terminal"></i>
                     <span>Logs</span>
                 </a>
