--- a/static/index.html
+++ b/static/index.html
@@ -6,19 +6,20 @@
     <title>Stock Market - Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="images/logo.png" alt="Stock Market Logo">
             </a>
             <nav>
-                <a href="favorites.html" class="favorites-link">
+                <a href="/favorites" class="favorites-link">
                     <i class="fas fa-star"></i>
                     <span>Favorites</span>
                 </a>
-                <a href="log.html" class="nav-link active">
+                <a href="/log" class="nav-link active">
                     <i class="fas fa-terminal"></i>
                     <span>Logs</span>
                 </a>
