--- a/static/log.html
+++ b/static/log.html
@@ -5,26 +5,22 @@
     <title>Stock Market - Logs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-
-    <!-- Shared styles -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Socket.IO -->
+    <link rel="icon" href="favicon.ico">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body>
     <header>
         <div class="header-content">
-            <a href="index.html" class="logo">
+            <a href="/" class="logo">
                 <img src="images/logo.png" alt="Stock Market Logo">
             </a>
             <nav>
-                <a href="favorites.html" class="favorites-link">
+                <a href="/favorites" class="favorites-link">
                     <i class="fas fa-star"></i>
                     <span>Favorites</span>
                 </a>
-                <a href="log.html" class="nav-link active">
+                <a href="/log" class="nav-link active">
                     <i class="fas fa-terminal"></i>
                     <span>Logs</span>
                 </a>
