--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
 
         <div class="search-container">
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Enter stock symbol or company name...">
+                <input type="text" id="searchInput" placeholder="Enter stock symbol or company name..." maxlength="6">
             </div>
             <div id="searchSuggestions" class="search-suggestions"></div>
             <div id="selectedStocks" class="selected-stocks"></div>
