Restructure, split to page-specific .js files, implement adding/removing favorites on frontpage as well as favorites page

--- a/static/index.html
+++ b/static/index.html
@@ -35,13 +35,12 @@
 
         <div class="search-container">
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="Enter stock symbol or company name..." maxlength="6">
+                <input type="text" id="searchInput" placeholder="Search stocks..." autocomplete="off" />
             </div>
             <div id="searchSuggestions" class="search-suggestions"></div>
-            <div id="selectedStocks" class="selected-stocks"></div>
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
