--- a/static/favorites.html
+++ b/static/favorites.html
@@ -38,7 +38,6 @@
             </div>
         </div>
     </main>
-
-    <script src="script.js"></script>
+    <script src="favorites.js"></script>
 </body>
 </html>
