Add update button

--- a/static/favorites.html
+++ b/static/favorites.html
@@ -36,6 +36,7 @@
             <button class="tab-button active" data-filter="recommended">Recommended</button>
             <button class="tab-button" data-filter="3d">3-Day Drop</button>
             <button class="tab-button" data-filter="5d">5-Day Drop</button>
+            <button id="updateFavoritesBtn" class="update-btn">Update</button>
         </div>
         <div class="favorites-container">
             <div id="favoritesList" class="stock-list">
