Ticker filtering by given parameters + REST communication with News module (#32)
Co-Authored-By: Mikhail Belov <mikhail.belov@tul.cz>

--- a/static/favorites.html
+++ b/static/favorites.html
@@ -32,6 +32,11 @@
             <h1>Favorite Stocks</h1>
             <p>Your shared list of favorite stocks and companies.</p>
         </div>
+        <div class="tabs">
+            <button class="tab-button" data-filter="3d">3-Day Drop</button>
+            <button class="tab-button" data-filter="5d">5-Day Drop</button>
+            <button id="updateFavoritesBtn" class="update-btn">Update</button>
+        </div>
         <div class="favorites-container">
             <div id="favoritesList" class="stock-list">
                 <!-- Favorites will be populated here by JavaScript -->
